Added tests for cart page, rewrite existing tests, added description of project in readme file.

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 markers =
     login_page: Tests to check the functionality of the login page
     inventory_page: Tests to check the functionality of the inventory page
+    cart_page: Tests to check the functionality of the cart page
